# ask-me

./: .gitignore  README.md
app/: Cargo.toml
app/src/: main.rs
client/: build.rs
client/src/: main.rs
domain/: Cargo.toml
domain/src/: answer.rs  question.rs
inbound_grpc_client/: Cargo.toml
inbound_grpc_client/src/: answer_impl.rs  question_impl.rs
inbound_grpc_server/: Cargo.toml
inbound_grpc_server/src/: answer_impl.rs  lib.rs  main.rs  question_impl.rs
outbound_db_log/: Cargo.toml
outbound_db_log/src/: answer.rs  main.rs  question.rs
protos/: answer.proto  question.proto
server/src/: answer_impl.rs  question_impl.rs
ui/: package-lock.json  package.json
ui/src/app/: app.module.ts
ui/src/app/home/: answer.ts  home.page.ts  question.ts
ui/src/proto/: answer.pb.ts  answer.pbconf.ts  answer.pbsc.ts  question.pb.ts  question.pbconf.ts  question.pbsc.ts
