[package]
name = "inbound_grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.1", features = ["cors"] }

[build-dependencies]
tonic-build = "0.12.3"
